# esp-idf

components/app_trace/: CMakeLists.txt
components/app_update/: CMakeLists.txt
components/bootloader_support/: CMakeLists.txt
components/bt/: CMakeLists.txt
components/console/: CMakeLists.txt  commands.c  esp_console_repl.c
components/driver/: CMakeLists.txt
components/efuse/: CMakeLists.txt
components/esp_adc/: CMakeLists.txt
components/esp_eth/: CMakeLists.txt
components/esp_event/: esp_event.c
components/esp_gdbstub/: CMakeLists.txt
components/esp_hid/: CMakeLists.txt
components/esp_http_client/: CMakeLists.txt
components/esp_https_ota/: CMakeLists.txt
components/esp_lcd/: CMakeLists.txt
components/esp_local_ctrl/: CMakeLists.txt
components/esp_mm/: CMakeLists.txt
components/esp_phy/: CMakeLists.txt
components/esp_pm/: CMakeLists.txt
components/esp_ringbuf/: ringbuf.c
components/esp_system/: debug_stubs.c  xt_wdt.c
components/esp_timer/: CMakeLists.txt
components/espcoredump/: CMakeLists.txt
components/hal/: CMakeLists.txt
components/heap/: heap_caps.c
components/idf_test/: CMakeLists.txt
components/mqtt/: CMakeLists.txt
components/newlib/: CMakeLists.txt  abort.c  heap.c  locks.c  newlib_init.c  newlib_stub.c  poll.c  pthread.c  random.c  reent_init.c  syscalls.c  time.c
components/protocomm/: CMakeLists.txt
components/pthread/: CMakeLists.txt  pthread.c  pthread_xxx.c
components/sdmmc/: CMakeLists.txt
components/spi_flash/: CMakeLists.txt  esp_flash_api_linux.c
components/tcp_transport/: CMakeLists.txt
(+88 files in other folders)
